--- a/src/main/resources/db.changelog/changes/3-create_table_directory.yml
+++ b/src/main/resources/db.changelog/changes/3-create_table_directory.yml
@@ -26,5 +26,12 @@ databaseChangeLog:
                   remarks: token
                   constraints:
                     nullable: false
+              - column:
+                  name: USER_ID
+                  type: UUID
+                  remarks: fk to refer on table user
+                  constraints:
+                    - foreignKeyName: FK_PK_USER_ID
+                    - references: USER(ID)
             remarks: Directory
             tableName: directory
