fix: userID generation add

--- a/src/main/resources/db.changelog/changes/2-create_table_documenttype.yml
+++ b/src/main/resources/db.changelog/changes/2-create_table_documenttype.yml
@@ -11,7 +11,7 @@ databaseChangeLog:
                   remarks: id
                   constraints:
                     primaryKey: true
-                    primaryKeyName: PK_ADMIN
+                    primaryKeyName: PK_DOCUMENTTYPE
                     nullable: false
                   autoIncrement: ${autoIncrement}
               - column:
