--- a/src/main/resources/db.changelog/changes/1-create_table_userentity.yml
+++ b/src/main/resources/db.changelog/changes/1-create_table_userentity.yml
@@ -11,7 +11,7 @@ databaseChangeLog:
                   remarks: id
                   constraints:
                     primaryKey: true
-                    primaryKeyName: PK_USER
+                    primaryKeyName: PK_USERENTITY
                     nullable: false
                   autoIncrement: ${autoIncrement}
               - column:
@@ -26,5 +26,5 @@ databaseChangeLog:
                   remarks: code
                   constraints:
                     nullable: false
-            remarks: User
-            tableName: user
+            remarks: Userentity
+            tableName: userentity
